Fix #9: Width of dropdowns to fix text and BG overflow

--- a/src/pages/navbar/NavBar.css
+++ b/src/pages/navbar/NavBar.css
@@ -21,3 +21,10 @@
     align-items: center;
     color: #0FA98D;
 }
+.dropdown-item {
+    width: 144px;
+}
+
+.dropdown-menu {
+    width: 180px;
+}
